hard-gists/9cba618eacedc68c656b/run.log
=== Docker Run Log for 9cba618eacedc68c656b ===
Started at: Mi 29. Okt 18:41:27 CET 2025

[2025-10-29 18:41:27] START: Running container for 9cba618eacedc68c656b
[2025-10-29 18:41:28] SUCCESS: Container b8355ed82e7398964b3468894226b303dc83a5f0afcfa5ec6f0d203a1a639788 started for 9cba618eacedc68c656b
=== Container logs for 9cba618eacedc68c656b ===
  File "/snippet.py", line 41
    def test_for_shellcode((key, packet, file_path)):
                           ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Function parameters cannot be parenthesized
=== End of logs for 9cba618eacedc68c656b ===
[2025-10-29 18:41:30] INFO: Container b8355ed82e7398964b3468894226b303dc83a5f0afcfa5ec6f0d203a1a639788 has stopped
